apply plugin: 'java'
apply from: "gradle/plugin/javafx.plugin"

compileJava {
    sourceCompatibility = '1.8'
    targetCompatibility = '1.8'
}
defaultTasks 'clean', 'run'

version = '0.1'

repositories {
    mavenCentral()
}

dependencies {
    // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
    compile group: 'org.slf4j', name:'slf4j-simple', version: '1.7.21'

    // https://mvnrepository.com/artifact/org.aeonbits.owner/owner
    compile group: 'org.aeonbits.owner', name: 'owner', version: '1.0.4'

    // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.7.2'

    // https://mvnrepository.com/artifact/junit/junit
    testCompile group: 'junit', name: 'junit', version: '4.+'

    // https://mvnrepository.com/artifact/org.jfree/jfreechart
    compile group: 'org.jfree', name: 'jfreechart', version: '1.0.19'

}

test {
    testLogging {
        events "passed", "skipped", "failed", "standardOut", "standardError"
    }
}

javafx {
    appID 'SEP'
    appName 'Software Engineering Project'
    mainClass 'com.sepgroup.sep.Main'

//    jvmArgs = ['-XX:+AggressiveOpts', '-XX:CompileThreshold=1']
//    systemProperties = [ 'prism.disableRegionCaching':'true' ]
//    arguments = ['-l', '--fast']

    // deploy/info attributes
//    category = 'Demos'
    copyright = 'Copyright (c) 2016 SEP GROUP'
//    description = 'This is a sample configuration, it is not real.'
//    licenseType = 'Apache 2.0'
//    vendor = 'Acme'
//    installSystemWide = true
//    menu = true
//    shortcut = true

    // app icons
    icons {
        shortcut = ['shortcut-256.png']
//        volume = 'javafx-icon.png'
//        setup = 'javafx-icon.png'
    }

    // applet and webstart stuff

//    width = 800
//    height = 600
//    embedJNLP = false
//    codebase = 'http://example.com/bogus/JNLP/Codebase'

}